--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
 <body>
     <div class="container">
-        <div id="fun" class="box">Box - 1</div>
+        <div id="fun" class="box">
+            <p>Box - 1</p></div>
         <div class="box">Box - 2</div>
         <div class="box">Box - 3</div>
         <div class="box">Box - 4</div>
