--- a/index.html
+++ b/index.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
     <style>
-        .box {
-            height: 45px;
-            width: 56px;
+        .box{
+            height: 34px;
+            width: 34px;
+            margin: 34px;
+            padding: 34px;
             border: 2px solid black;
-            margin: 5px;
-            padding: 5px;
         }
-        </style>
+    </style>
+    <script src="script.js"></script>
 </head>
-
 <body>
     <div class="container">
-        <div id="fun" class="box">
-            <p>Box - 1</p></div>
-        <div class="box">Box - 2</div>
-        <div class="box">Box - 3</div>
-        <div class="box">Box - 4</div>
-        <div class="box">Box - 5</div>
+        <div class="box">Bhupendra Jogi</div>
+        <div class="box" id="two">Bhupendra Jogi</div>
+        <div class="box">Bhupendra Jogi</div>
+        <div class="box">Bhupendra Jogi</div>
+        <div class="box">Bhupendra Jogi</div>
     </div>
 </body>
 </html>
